welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: illegal start of statement
    else if(7<=hour && hour=>20){
    ^